RESOLVED FIXED310967
[PlayStation] Fix alert/confirm/prompt dialogs not working in MiniBrowser
https://bugs.webkit.org/show_bug.cgi?id=310967
Summary [PlayStation] Fix alert/confirm/prompt dialogs not working in MiniBrowser
Pardeep Yadav
Reported 2026-03-28 02:34:09 PDT
Fixed an issue where JavaScript dialog APIs (alert, confirm, prompt) do not work in MiniBrowser on the PlayStation port. Clicking buttons do not open dialogs. Root cause is that MiniBrowser of PlayStation port does not register callback for JavaScript dialog APIs (alert, confirm, prompt).
Attachments
Pardeep Yadav
Comment 1 2026-03-28 02:39:20 PDT
Summary * Fixed an issue where JavaScript dialog APIs (alert, confirm, prompt) do not work in MiniBrowser on the PlayStation port. Clicking buttons do not open dialogs. Root Cause * The MiniBrowser of PlayStation port does not register callback for JavaScript dialog APIs (alert, confirm, prompt). Fix * Added runJavaScriptAlert and Register to MiniBrowser. Added WKPageRunJavaScriptAlertResultListenerCall to runJavaScriptAlert. * Added runJavaScriptConfirm and Register to MiniBrowser. Added WKPageRunJavaScriptConfirmResultListenerCall to runJavaScriptConfirm. * Added runJavaScriptPrompt and Register to MiniBrowser. Added WKPageRunJavaScriptPromptResultListenerCall to runJavaScriptPrompt Testing * Verified that alert(), confirm(), and prompt() open dialog box in MiniBrowser of PlayStation port. * Tested with simple HTML pages triggering each dialog type. * Changes only applicable for PlayStation port.
Pardeep Yadav
Comment 2 2026-03-28 02:42:58 PDT
Radar WebKit Bug Importer
Comment 3 2026-04-04 02:35:11 PDT
EWS
Comment 4 2026-04-07 15:12:34 PDT
Committed 310742@main (1cda92774256): <https://commits.webkit.org/310742@main> Reviewed commits have been landed. Closing PR #61564 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.