[PlayStation] Fix alert/confirm/prompt dialogs not working in MiniBrowser https://bugs.webkit.org/show_bug.cgi?id=310967

Reviewed by Don Olmstead.

This patch fixes the issue where alert, confirm, and prompt dialogs were
not working in MiniBrowser on PlayStation. The problem was caused by
missing handling of JavaScript dialog callbacks in
WebViewWindow.

The patch implements proper handling in
WebViewWindow::runJavaScriptPrompt,
WebViewWindow::runJavaScriptConfirm,
WebViewWindow::runJavaScriptPrompt,
ensuring that dialogs are correctly triggered and responses are returned
to the WebKit layer.

* Tools/MiniBrowser/playstation/WebViewWindow.cpp:
(WebViewWindow::WebViewWindow):
(WebViewWindow::runJavaScriptPrompt):
(WebViewWindow::runJavaScriptConfirm):
(WebViewWindow::runJavaScriptPrompt):
* Tools/MiniBrowser/playstation/WebViewWindow.h:

Canonical link: https://commits.webkit.org/310742@main